Implements the find_repo function.